2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Added documentation for the new D-Bus Service plugin.

2009-03-31  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml:
	* Makefile.am: Allow the list of documenters to be automatically-
	generated. (Closes: #573295)

2009-03-18  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2009-03-17  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Fixed a typo.
	* en_GB/en_GB.po: Updated British English translation.

2009-03-15  Andre Klapper  <a9016009@gmx.de>

	* cs.po: Updated Czech translation by Martin Picek.
	* Makefile.am: Added cs to DOC_LINGUAS.

2009-03-14  Philip Withnall  <philip@tecnocode.co.uk>

	* en_GB/en_GB.po: Updated British English translation.

2009-03-09  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Added details of documentation reviews.

2009-03-09  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Marking documentation as final!

2009-03-09  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2009-03-09  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: A few more small fixes to the documentation to aid
	readability and consistency.

2009-03-08  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2009-03-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>

	* en_GB/en_GB.po: Updated British English translation.

2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Made a few more bits of terminology consistent and
	fixed the rest of the problems on Shaun's list.

2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>

	* C/totem.xml: Fixed some problems found by Shaun McCance's editorial