@@ -1,3 +1,10 @@
+2009-04-03  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* C/totem.xml: Upgraded manual to use DocBook 4.5, and fixed a few
+	validation problems such that `make check` now passes.
+	* de/de.po:
+	* pl/pl.po: Fixed a few markup validation problems.
+
 2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* C/totem.xml: Added documentation for the new D-Bus Service plugin.
